fixed max height, added overflow option for table scrolling

--- a/app/assets/stylesheets/dispatch.scss
+++ b/app/assets/stylesheets/dispatch.scss
@@ -2,14 +2,14 @@
   width: 100%;
   text-align: center;
   border: 1px solid black;
-  max-height: 500px;
 }
 
 #driver-list{
   width: 15%;
   float: left;
   border: 1px solid black;
-  max-height: 500px;
+  height: 500px;
+  overflow: auto;
 }
 
 .selected-driver {
@@ -24,19 +24,20 @@
   width: 20%;
   float: left;
   border: 1px solid black;
-  max-height: 500px;
+  height: 500px;
+  overflow: auto;
 }
 
 #unassigned-shipments{
   width: 45%;
   float: left;
   border: 1px solid black;
-  max-height: 500px;
+  height: 500px;
+  overflow: auto;
 }
 
 #new-shipment{
   width: 45%;
   float: left;
   border: 1px solid black;
-  max-height: 500px;
 }
